syntax = "proto3";

package cacophony;
option go_package = "cacophony/cacophony";

service ChatService {

  // User account management
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  // Messaging
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc ReceiveMessage (ReceiveMessageRequest) returns (stream Message);

  // Group management
  rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
  rpc AddUserToGroup (AddUserToGroupRequest) returns (AddUserToGroupResponse);
}

// User Account Messages
message CreateAccountRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateAccountResponse {
  string token = 1;
  string message = 2;
  bool success = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  bool success = 2;
}

// Messaging
message SendMessageRequest {
  string token = 1;
  uint64 conversationID = 2;
  Message message = 3;
}

message SendMessageResponse {
  bool success = 1;
  string message = 2;
}

message ReceiveMessageRequest {
  string token = 2;
}

message Message {
  string fromUserId = 1;
  string content = 2;
  int64 timestamp = 3;
}

// Group Management
message CreateGroupRequest {
  string groupName = 1;
  string token = 2;
}

message CreateGroupResponse {
  string groupId = 1;
  string message = 2;
  bool success = 3;
}

message AddUserToGroupRequest {
  string token = 1;
  string groupId = 2;
  string userId = 3;
}

message AddUserToGroupResponse {
  bool success = 1;
  string message = 2;
}
